@@ -554,6 +554,7 @@ void *returnInterpolatorPointer (const char *x);
 void CRoutes_js_new (uintptr_t num,int scriptType);
 extern int max_script_found;
 void getMFNodetype (char *strp, struct Multi_Node *ch, struct X3D_Box *par, int ar);
+void AddRemoveChildren (struct X3D_Node *parent, struct Multi_Node *tn, uintptr_t *nodelist, int len, int ar);
 
 void update_node(void *ptr);
 void update_renderFlag(void *ptr, int flag);
